# fashion-mnist-classificator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  infer.py  models.dvc  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
configs/: config.py  config.yaml
data/: .gitignore  results.dvc
fashion/: classifier.py  fitter.py  inference.py  trainer.py  transforms.py  visualizers.py
models/: fashion-classifactor.pt.dvc
