[tool.poetry]
name = "fashion-mnist-classificator"
version = "0.1.0"
description = "Сlassification of clothing on the Fashion-MNIST dataset"
authors = ["Dmitry Kulikov <dakulikov2001@mail.ru>"]
readme = "README.md"
repository = "https://github.com/Kulikov17/fashion-mnist-classificator"
keywords = ["fashion", "mnist", "cv", "deep learning"]
packages = [{include = "fashion"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
torch = "^2.1.0"
torchvision = "^0.16.0"
scikit-learn = "^1.2.2"
hydra-core = "^1.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
flake8-pyproject = "^1.2.3"
dvc = {extras = ["gdrive"], version = "^3.33.4"}
mlflow = "^2.9.2"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["fashion"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['D100', 'D101', 'D103', 'T201']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
